[gd_scene load_steps=13 format=3 uid="uid://bs24c5uqf2lq8"]

[ext_resource type="Script" path="res://scenes/menus/game_over.gd" id="1_k8gmx"]
[ext_resource type="Shader" path="res://assets/shaders/main_menu_background.gdshader" id="2_jq32d"]
[ext_resource type="Theme" uid="uid://qb6dgmsbm5um" path="res://assets/themes/menu_theme.tres" id="3_yc1e6"]
[ext_resource type="LabelSettings" uid="uid://cat466i40g3su" path="res://assets/themes/title_label.tres" id="4_8vhud"]
[ext_resource type="LabelSettings" uid="uid://6cmppknv3tn2" path="res://assets/themes/title_description_label.tres" id="5_uue8w"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_33lxc"]
resource_local_to_scene = true
shader = ExtResource("2_jq32d")
shader_parameter/transparency = 1.0
shader_parameter/color0 = Color(1, 1, 1, 1)
shader_parameter/color1 = Color(0, 0, 0, 1)
shader_parameter/color2 = Color(1, 1, 1, 1)
shader_parameter/color3 = Color(0, 0, 0, 1)
shader_parameter/Direction = Vector2(-2, -1)
shader_parameter/Speed = 20.0
shader_parameter/thresholds = PackedFloat32Array(0.5, 0.6, 0.7)
shader_parameter/OCTAVE = 6
shader_parameter/pixel_size = 128
shader_parameter/dithering = 1.5

[sub_resource type="Gradient" id="Gradient_gf477"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.349593)
colors = PackedColorArray(1, 1, 1, 0, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wf4wx"]
gradient = SubResource("Gradient_gf477")
width = 512
height = 512
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Animation" id="Animation_7bgli"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:texture:fill_from")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_4uepp"]
resource_name = "menu_transition"
length = 30.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:texture:fill_from")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(3.76667, 7.6, 10, 13.8667, 18.0333, 21.7333, 30),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.48, 0.53), Vector2(0.56, 0.4), Vector2(0.6, 0.38), Vector2(0.65, 0.45), Vector2(0.4, 0.6), Vector2(0.48, 0.53), Vector2(0.4, 0.48)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_80jl6"]
_data = {
"RESET": SubResource("Animation_7bgli"),
"menu_transition": SubResource("Animation_4uepp")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r2kr6"]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_k8gmx")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_33lxc")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_wf4wx")
stretch_mode = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_80jl6")
}
autoplay = "menu_transition"

[node name="TitleContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_yc1e6")

[node name="TitleRows" type="VBoxContainer" parent="TitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_yc1e6")

[node name="Labels" type="VBoxContainer" parent="TitleContainer/TitleRows"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_yc1e6")

[node name="TitleLabel" type="Label" parent="TitleContainer/TitleRows/Labels"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_yc1e6")
text = "Game Over"
label_settings = ExtResource("4_8vhud")

[node name="DescriptionLabel" type="Label" parent="TitleContainer/TitleRows/Labels"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_yc1e6")
theme_override_font_sizes/font_size = 16
text = "Thanks for playing!"
label_settings = ExtResource("5_uue8w")

[node name="HSeparator" type="HSeparator" parent="TitleContainer/TitleRows"]
layout_mode = 2
theme_override_constants/separation = 96
theme_override_styles/separator = SubResource("StyleBoxEmpty_r2kr6")

[node name="Buttons" type="VBoxContainer" parent="TitleContainer/TitleRows"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_yc1e6")
theme_override_constants/separation = 11

[node name="ReturnButton" type="Button" parent="TitleContainer/TitleRows/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("3_yc1e6")
text = "Return"

[node name="QuitButton" type="Button" parent="TitleContainer/TitleRows/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("3_yc1e6")
text = "Quit"
